Add tables and embedded code and latex

--- a/MovieLens_Solution/Report.Rmd
+++ b/MovieLens_Solution/Report.Rmd
@@ -8,19 +8,26 @@ output:
     df_print: paged
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-```{r, code = source("Solution.R"), echo=FALSE}
+```{r, code = source("Solution.R"),  include=FALSE, echo=FALSE}
+```
+
+```{r}
+library(knitr)
 ```
 
 \newpage
 # Introduction
 
 ## Overview
-This report documents the process and methodology adopted by this project to devise a movie recommendation system. The movie recommendations are derived from the predicted ratings made by a user for a given movie based on previous ratings made by the user on other films. 
-The movie recommendtaion system will analyze a dataset of movie ratings to predict what ratings a particular user would give a movie. 
+The web site http://www.movielens.org/ allows users to rate films from one to five stars, with half-star ratings allowed. This project aims to use the large number of movies, ratings and users available to find a method to predict movie ratings. 
+
+This report describes the process and methodology adopted by this project to analyze the existing movie ratings and to devise a method to predict ratings. The accuracy of the various methods will be compared, the accuarcy being indicated by the RMSE of the predictions of each method.
+
+The project will analyze a dataset of movie ratings to predict what ratings a particular user would give a movie. 
 
 The users are randomly selected and are only identified by a uniquely assigned user id; there is no demographic and geopgraphic location information used.
 
@@ -78,10 +85,10 @@ The objective of the project was to find a movie recommendation algorithm. Its s
 
 ## Modelling Techniques
 
-The algoritm will start from a naive position and then be refined as further insights into the data are gained. The effect of each refinement will be assessed using a loss function. The RMSE (_residual mean squared error_) will be used as the loss function for this project.
+The algoritm will start from a naive position and then be refined as further insights into the data are gained. The effect of each refinement will be accessed using a loss function. The RMSE (_residual mean squared error_) will be used as the loss function for this project.
 
-### Version 1
-Use the avarage rating of the training data to predict the rating in the test data.
+### Version 1 : Naive Implementation
+The first attemp will use the average movie rating of the training data to predict the rating in the test data. The RMSE will then be measured. The formula for this is described as follows, where u is the user, i is the movie, ${\mu}$ is the average and ${\epsilon}$ is the error.
 
 $$
 \begin{aligned}
@@ -89,8 +96,22 @@ $$
 \end{aligned}
 $$
 
-### Version 2
-Use the mean with the addition of a movie effect to take into account that some movies are rated more favourably then others.
+
+### Version 2 : Coinsider the individual movie effect 
+This modification will use the mean with the addition of a movie effect to take into account that some movies are rated more favourably then others. For example, the top 5 rated movies are:
+
+```{R}
+kable(head(ranked_movies,5), caption="Top 5 Rated Movies")
+```
+
+The bottom 5 rated movies include:
+
+```{R}
+kable(tail(ranked_movies,5), caption="Bottom 5 Rated Movies")
+```
+
+We can see that some movies are rated very often and have a large number of ratings. For example `r best_movie$title` has `r best_movie$n` whilst `r worst_movie$title` has `r worst_movie$n`. However, note that this does not necessarily mean that the _average_ rating for these movies is low or high. A movie with many ratings does may be rated poor by many users and a movie with only a single rating may be rated highly by that single user.
+
 
 $$
 \begin{aligned}
@@ -146,3 +167,4 @@ ggplot(rmse_results, aes(x = method, y = RMSE)) +
 \newpage
 # Bibliography and References
 
+F. Maxwell Harper and Joseph A. Konstan. 2015. The MovieLens Datasets: History and Context. ACM Transactions on Interactive Intelligent Systems (TiiS) 5, 4, Article 19 (December 2015), 19 pages. DOI=http://dx.doi.org/10.1145/2827872 
