--- a/MovieLens_Solution/Test.Rmd
+++ b/MovieLens_Solution/Test.Rmd
@@ -10,6 +10,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+current directory `R Sys.Date()` xxxx
+
 $$
 \begin{aligned}
  AR(p): Y_i &= c + \epsilon_i + \phi_i Y_{i-1} \dots \\
