--- a/MovieLens_Solution/Test.Rmd
+++ b/MovieLens_Solution/Test.Rmd
@@ -1,34 +1,15 @@
 ---
 title: "Test"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-current directory `R Sys.Date()` xxxx
-
-$$
-\begin{aligned}
- AR(p): Y_i &= c + \epsilon_i + \phi_i Y_{i-1} \dots \\
- Y_{i} &= c + \phi_i Y_{i-1} \dots
-\end{aligned}
-$$
-
-$$
-\begin{aligned}
- Y_{u,i} &= \mu + \epsilon_{u,i}
-\end{aligned}
-$$
-$$
-\begin{aligned}
- Y_{u,i} &= \mu + b_i + \epsilon_{u,i}
-\end{aligned}
-$$
 $$
 \begin{aligned}
  Y_{u,i} &= \mu + b_u + \epsilon_{u,i}
@@ -38,6 +19,6 @@ $$
 
 $$
 \begin{aligned}
- Y_{u,i} &= \mu + b_i + b_u + \epsilon_{u,i}
+\frac{1}{N} \sum_{u,i} (y_{u,i} - \mu -b_{i})^2 + \lambda \sum_{i} b_{i}^2
 \end{aligned}
 $$
