--- a/MovieLens_Solution/Report.Rmd
+++ b/MovieLens_Solution/Report.Rmd
@@ -23,13 +23,13 @@ library(knitr)
 # Introduction
 
 ## Overview
-The web site http://www.movielens.org/ allows users to rate films from one to five stars, with half-star ratings allowed. This project aims to use the large number of movies, ratings and users available to find a method to predict movie ratings. 
+The web site http://www.movielens.org/ allows users to rate films from one to five stars, with half-star ratings allowed. This project aims to utilize the large number of movies, ratings and users available to find a method to predict movie ratings. 
 
-This report describes the process and methodology adopted by this project to analyze the existing movie ratings and to devise a method to predict ratings. The accuracy of the various methods will be compared, the accuarcy being indicated by the RMSE of the predictions of each method.
+This report describes the process and methodology adopted by the project to analyze the existing movie ratings and to devise a method to predict ratings. The accuracy of the various methods will be compared, the accuracy being indicated by the RMSE (_root mean squared error_) of the predictions of each method.
 
 The project will analyze a dataset of movie ratings to predict what ratings a particular user would give a movie. 
 
-The users are randomly selected and are only identified by a uniquely assigned user id; there is no demographic and geopgraphic location information used.
+The users are randomly selected and are only identified by a uniquely assigned user id; no demographic and geographic location information is used.
 
 ## Dataset
 
@@ -38,19 +38,19 @@ The source dataset was created by the University of Minnesota from the online mo
  
 It is a large dataset and contains:
 
-* 10000054 ratings 
+* 10,000,054 ratings 
 
-* 95580 tags 
+* 95,580 tags 
 
-* 10681 movies by 
+* 10,681 movies
 
-* 71567 users
+* 71,567 users
 
 The source files can be obtained from this location:
 
 * https://grouplens.org/datasets/movielens/10m/
 
-This link shows further details, including usage rights provided by the license:
+This link shows further details, including usage rights provided by the licence:
 
 * http://files.grouplens.org/datasets/movielens/ml-10m-README.html
 
@@ -74,7 +74,7 @@ A *test partition* will be allocated the remaining *20%* of the sample data and 
 
 
 ## Goal
-The objective of the project was to find a movie recommendation algorithm. Its success will be measured by reference to the RMSE produced when the algorithm is validated against the test dataset. The RMSE will be graded against a predfined set of thresholds to determine the overall quality of the algorithm (described later).
+The objective of the project is to find a movie recommendation algorithm. Its success will be measured by reference to the RMSE produced when the algorithm is validated against the test dataset. The RMSE will be graded against a predefined set of thresholds to determine the overall quality of the algorithm (described later).
 
 
 
@@ -85,7 +85,7 @@ The objective of the project was to find a movie recommendation algorithm. Its s
 
 ## Modelling Techniques
 
-The algoritm will start from a naive position and then be refined as further insights into the data are gained. The effect of each refinement will be accessed using a loss function. The RMSE (_residual mean squared error_) will be used as the loss function for this project.
+The algorithm will start from a naive position and then be refined as further insights into the data are gained. The effect of each refinement will be accessed using a loss function. The RMSE will be used as the loss function for this project.
 
 ### Version 1 : Naive Implementation
 The first attempt will use the average movie rating of the training data to predict the rating in the test data. The RMSE will then be measured. The formula for Y (the prediction) is described as follows, where u is the user, i is the movie, ${\mu}$ is the average and ${\epsilon}$ is the error.
@@ -103,7 +103,7 @@ kable(head(rmse_results,1), caption="Results for method 1")
 ```
 
 ### Version 2 : Consider the individual movie effect 
-This modification will use the mean with the addition of a movie effect to take into account that some movies are rated more favourably then others. For example, the top 5 most-rated and top 5 least-rated movies are shown below:
+This modification will use the mean with the addition of a movie effect to take into account that some movies are rated more favourably than others. For example, the top 5 best rated and bottom 5 worst rated movies are shown below:
 
 ```{r movie_best_rated}
 kable(head(movies_by_mean,5), caption="Top 5 Movies - Best Rated")
@@ -114,7 +114,7 @@ kable(head(movies_by_mean,5), caption="Top 5 Movies - Best Rated")
 kable(tail(movies_by_mean,5), caption="Top 5 Movies - Worst Rated")
 ```
 
-We can see that some movies are rated very highly. For example `r best_movie$title` has an average rating of `r best_movie$average` stars whilst `r worst_movie$title` only has `r worst_movie$average`. The best and worst movies are not necessilly the most and least frequently rated. The top 5 most and least rated are shown below:
+We can see that some movies are rated very highly. For example `r best_movie$title` has an average rating of `r best_movie$average` stars whilst `r worst_movie$title` only has `r worst_movie$average`. The best and worst movies are not necessarily the most and least frequently rated. The top 5 and bottom 5 movies by number of ratings are shown below:
 
 
 ```{r movie_most_rated}
@@ -128,21 +128,21 @@ kable(tail(movies_by_n,5), caption="Top 5 Movies - Least Number of Ratings")
 
 We can see that some movies are rated very often. For example `r most_movie$title` has `r most_movie$n` ratings whilst `r least_movie$title` only has `r least_movie$n`. 
 
-If we plot the mean against the number of ratings we can see that the extremeties (1 star and 5 star) are only obtained by movies with a small number of ratings.
+If we plot the mean against the number of ratings we can see that the extremities (1 star and 5 star) are only obtained by movies with a small number of ratings.
 
 ```{r movie_extremtities_have_low_numbers, echo=FALSE}
 ggplot(movies, aes(x = average, y = n, size=n, color=n)) +
   geom_point() +
   scale_y_continuous(trans='log10') +
-  ggtitle("Average Ratings", subtitle="Extremeties occuiped by small number of ratings") +
+  ggtitle("Average Ratings", subtitle="Extremities occupied by small number of ratings") +
   xlab("Average Rating") +
   ylab("Number of Ratings") +
   theme_minimal()
 ```
 
-This shows us that movies with small number of ratings may have a distorting effect.
+This shows us that movies with a small number of ratings may have a distorting effect.
 
-The formula for Y (the prediction) this is described as follows, where u is the user, i is the movie, ${\mu}$ is the average, ${\epsilon}$ is the error and b is the movie effect.
+The formula for Y (the prediction) is described as follows, where u is the user, i is the movie, ${\mu}$ is the average, ${\epsilon}$ is the error and b is the movie effect.
 
 $$
 \begin{aligned}
@@ -156,9 +156,9 @@ kable(head(rmse_results,2), caption="Results for method 1 and method 2")
 ```
 
 ### Version 3 : Consider the individual user effect 
-This is similar to version 2, but instead of looking at the movie effect we're going to look at the user effect; i.e. the fact that some users generally rate movies more generously then others and some users make lots of reviews whilst others make very few.
+This is similar to version 2, but instead of looking at the movie effect we are going to examine the user effect; i.e. the fact that some users generally rate movies more generously than others and some users make lots of reviews whilst others make very few.
 
-For example, the top 5 and bottom 5 users based on avarege rating given by that user is shown below:
+For example, the top 5 and bottom 5 users based on the average rating given by that user is shown below:
 
 ```{r user_best_ratings}
 kable(head(users_by_mean,5), caption="Top 5 Users - Highest Average Ratings")
@@ -169,7 +169,7 @@ kable(head(users_by_mean,5), caption="Top 5 Users - Highest Average Ratings")
 kable(tail(users_by_mean,5), caption="Top 5 Users - Lowest Average Ratings")
 ```
 
-As with movies we can see that there is variability in both the ratings given (some users appear to be more generous) and the number of ratings the usersa provide. For example `r best_user$userId` has given average rating of `r best_user$average` stars whilst `r worst_user$userId` has given an average rating of only `r worst_user$average`. This might be because user `r worst_user$id` tends to be make unlucky movie choices and watches poor movies. 
+As with movies we can see that there is variability in both the ratings given (some users appear to be more generous) and the number of ratings the users provide. For example, `r best_user$userId` has given an average rating of `r best_user$average` stars whilst `r worst_user$userId` has given an average rating of only `r worst_user$average`. This might be because user `r worst_user$userId` tends to be make unlucky movie choices and watches poor quality movies. 
 
 
 ```{r user_most_rated}
@@ -207,11 +207,16 @@ $$
 \end{aligned}
 $$
 
-```{r methods, echo=FALSE}
-ggplot(rmse_results, aes(x = method, y = RMSE)) +
+The value of ${\lambda}$ that leads to the best fit can be determined by trying different values. 
+
+Plotting the RMSE against ${\lambda}$ is shown below:
+
+```{r regulated, echo=FALSE}
+ggplot(regulated_data, aes(x = lambdas, y = RMSE)) +
     geom_point() +
-    ggtitle("RMSE", subtitle="Changes ") +
-    xlab("Method") +
+    geom_line() +
+    ggtitle("Regulated Fit", subtitle="Movie and User") +
+    xlab("Regulator Value (Lambda)") +
     theme_minimal()
 ```
 
@@ -222,12 +227,14 @@ kable(head(rmse_results,4), caption="Results for all 4 methods")
 
 \newpage
 # Results
-```{r regulated, echo=FALSE}
-ggplot(regulated_data, aes(x = lambdas, y = RMSE)) +
+
+The final RMSE values for each of the 4 refinements is shown below. 
+
+```{r methods, echo=FALSE}
+ggplot(rmse_results, aes(x = method, y = RMSE)) +
     geom_point() +
-    geom_line() +
-    ggtitle("Regulated Fit", subtitle="Movie and User") +
-    xlab("Regulator Value (Lambda)") +
+    ggtitle("RMSE", subtitle="Changes ") +
+    xlab("Method") +
     theme_minimal()
 ```
 
@@ -240,10 +247,12 @@ The best prediction occurs with the mean modified with the regulated movie and u
 Additional analysis that might increase the prediction accuracy (but not carried out by this project):
 
 Are there additional effects which could be investigated:
-1. genre : are some genres generally rated hire?
-2. age : are older films generally rated higher or lower?
-3. genre combinations : are some genre combinations more likely to rated higher or lower?
 
+* genre : are some genres generally rated hire?
+
+* age : are older films generally rated higher or lower?
+
+* genre combinations : are some genre combinations more likely to rated higher or lower?
 
 
 \newpage
